# abb_highlevel_bridge

./: CMakeLists.txt  README.md  package.xml
launch/: abb_inverse.launch.py  server_abb.launch.py
src/: abb_inverse.cpp  abb_inverse_position.cpp  abb_task_server.cpp  endEffector.cpp  inverse_kinematics.cpp  semantic_publisher.cpp
