<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_highlevel_bridge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mohammed.alaa200080@gmail.com">mohamed</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rosidl_default_generators</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>

  <build_depend>abb_robot_msgs</build_depend> <!-- Needed for ServiceResponses -->

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>abb_robot_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>